--- a/client/css/main.css
+++ b/client/css/main.css
@@ -40,3 +40,12 @@ body{
 #progressmessage{
 	padding-bottom: 10px;
 }
+
+@media (min-width: 1200px) {
+    .container{
+        max-width: 1100px;
+    }
+    body{
+    	min-height: 900px;
+    }
+}
