New feature: the fragmentformatter which allows you to see the quotes next to the film fragments

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -41,6 +41,10 @@ body{
 	padding-bottom: 10px;
 }
 
+.quote{
+	width:50%;
+}
+
 @media (min-width: 1200px) {
     .container{
         max-width: 1100px;
